# WebSocketTest

./: Dockerfile  README.md  main.py  production.yml  pyproject.toml  run.sh
src/decorators/: __init__.py  with_session.py
src/dependencies/: get_storage.py
src/routes/: get_data.py
src/services/: read_data.py  update_data.py
src/storages/: __init__.py  base.py  in_memory.py
